tests/snapshots/cli__gen_bin@var__assign.my.snap
---
source: tests/cli.rs
info:
  program: assign.my.out
  args: []
input_file: tests/input/var/assign.my
---
success: true
exit_code: 0
----- stdout -----
10
world

----- stderr -----
