tests/snapshots/cli__gen_bin@var__float-assign.my.snap
---
source: tests/cli.rs
info:
  program: float-assign.my.out
  args: []
input_file: tests/input/var/float-assign.my
---
success: true
exit_code: 0
----- stdout -----
1.200000
10.200000

----- stderr -----
