tests/snapshots/cli__gen_bin@var__lots-of-assignments.my.snap
---
source: tests/cli.rs
info:
  program: lots-of-assignments.my.out
  args: []
input_file: tests/input/var/lots-of-assignments.my
---
success: true
exit_code: 0
----- stdout -----
i
j
k
l
m
m
10
20
30

----- stderr -----
