tests/snapshots/cli__gen_bin@var__nums-and-strings.my.snap
---
source: tests/cli.rs
info:
  program: nums-and-strings.my.out
  args: []
input_file: tests/input/var/nums-and-strings.my
---
success: true
exit_code: 0
----- stdout -----
10
20
30
hello
world

----- stderr -----
