tests/snapshots/cli__gen_bin@var__var-assign.my.snap
---
source: tests/cli.rs
info:
  program: var-assign.my.out
  args: []
input_file: tests/input/var/var-assign.my
---
success: true
exit_code: 0
----- stdout -----
hi

----- stderr -----
